ALTERAÇÃO DE IMAGEM

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/BRIMAX - Perfil.jpg" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Expresshoping compras online"
+      content="Brimax - Angola "
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
    
@@ -33,7 +34,7 @@
       type="text/css"
     />
     
-    <title>Expresshoping</title>
+    <title> Brimax - Angola </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
